# pythonPltReader

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tecplotPltReader.py  tecplotPltReaderTest.py
rust_plt_reader/: Cargo.toml
rust_plt_reader/src/: lib.rs
