[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tecplot-plt-reader"
version = "0.1.0"
description = "Python Tecplot PLT Reader"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Dark Light"}]
dependencies = ["numpy"]

[tool.setuptools]
py-modules = ["tecplotPltReader"]

